[Fu-FE] [UPDATE] 30/02/21

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <link rel="icon" href="./dist/logo/logo.jpg" type="image/jpg" />
+        <link rel="icon" href="/dist/logo/logo.jpg" type="image/jpg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Funiture</title>
         <!-- <link href="./public/assets/fontawesome/css/all.css" rel="stylesheet" /> -->
