--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,15 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <link rel="icon" href="/dist/logo/logo.jpg" type="image/jpg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="icon"
+            href="/dist/logo/logo.jpg"
+            type="image/jpg"
+        />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0"
+        />
         <title>Funiture</title>
         <!-- <link href="./public/assets/fontawesome/css/all.css" rel="stylesheet" /> -->
     </head>
@@ -12,5 +19,6 @@
         <div id="root"></div>
         <!-- lay duong dan tuyet doi cua bundle -->
         <script src="/bundle.js"></script>
+        <script src="https://www.paypal.com/sdk/js?client-id=AeF3eeWebxhKztXcF_iYURO7quA-580zsbTmj18_F8ATBz4bMEEkQVMUatv4gmEQq1IUxGOEScJlOj1x&currency=USD"></script>
     </body>
 </html>
